<resources>
    <string name="app_name">Uber</string>
    <string name="txt_cedula">Cédula</string>
    <string name="txt_Nombre">Nombre</string>
    <string name="txt_Apellido">Apellido</string>
    <string name="txt_correo">Correo Electronico</string>
    <string name="txt_telefono">Numero de Telefono</string>
    <string name="txt_password">Password</string>
    <string name="txt_verificar">Verificar Password</string>
    <string name="txt_formulario">Registro Pasajero</string>
    <string name="button">Siguiente</string>
    <string name="txt_TituloTele">Verificar el Telefono</string>
    <string name="button_sent">Enviar Codigo</string>
    <string name="txt_tituloVerificacion">Introduce el código de verificación que te enviamos por SMS</string>
    <string name="txt_codigo">Código de verificación</string>
    <string name="button_verificar">Verificar</string>
    <string name="txt_Bienvenida">Bienvenido, se parte de nuestra familia</string>
    <string name="txt_Registro">Registrate como:</string>
    <string name="button_Pasajero">Pasajero</string>
    <string name="button_Conductor">Conductor</string>
    <string name="txt_codiPais">+593</string>
    <string name="txt_notiTelefono">Ingrese sin el primer digito el numero del celular</string>
    <string name="title_activity_menu_bar">MenuBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Tus viajes</string>
    <string name="menu_gallery">Pago</string>
    <string name="menu_slideshow">Ayuda</string>
    <string name="menu_tools">Viajes gratis</string>
    <string name="menu_share">Configuración</string>
    <string name="menu_send">Send</string>

    <string name="title_activity_google_maps">Map</string>

</resources>
