<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_drive_eta_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_credit_card_black_24dp"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_tag_faces_black_24dp"
            android:title="@string/menu_tools" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_share" />
    </group>

    <item android:title="Servicio Técnico">
        <menu>

            <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_slideshow" />

        </menu>
    </item>

</menu>
